--- a/HomePage.html
+++ b/HomePage.html
@@ -7,15 +7,16 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="container">
       <h1>JavaScript ToDo App</h1>
       <div class="row mt-4">
-        <div class="col-8">
+        <div class="col-md-8">
           <ul id="todo-list" />
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <form>
             <input
               type="text"
